--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
     "fs-extra": "^11.2.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
