--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": { "node": ">=18" },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
